# api_holder

.github/workflows/: ci.yml
api_holder_backend/: Cargo.toml  diesel.toml
api_holder_backend/migrations/: 20250704130456_users.down.sql  20250704130456_users.up.sql
api_holder_backend/migrations/2025-06-30-161718_users/: down.sql  up.sql
api_holder_backend/migrations/2025-06-30-162338_companies/: down.sql  up.sql
api_holder_backend/src/: constants.rs  core.rs  main.rs  models.rs  schema.rs  settings.rs  sql_types.rs
api_holder_backend/src/core/: db_conn.rs  security.rs
api_holder_backend/src/endpoints/v1/: mod.rs  users.rs
api_holder_backend/src/models/: companies.rs  users.rs
api_holder_backend/src/service/: users.rs
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/assets/svg/: Dashboard.vue  Heart.vue
frontend/components/contribute/: colors.vue  icons.vue
frontend/components/core/: Button.vue  Grid.vue  Icons.vue  Select.vue
frontend/components/layout/: sidebar.vue  topbar.vue
frontend/layouts/: default.vue  login.vue
frontend/pages/: index.vue
frontend/pages/contribute/: index.vue
frontend/pages/dashboard/: home.vue  index.vue  logs.vue
frontend/pages/dashboard/projects/: [id].vue  index.vue
frontend/stores/auth/: actions.js  index.js  state.js
frontend/stores/counter/: index.js
frontend/utils/: Icons.js  MenuItems.js  UrlMenu.js  colors.js
